# OSM_reader

./: .gitignore  .gitmodules  CMakeLists.txt  bgeo_ASCII_test.geo  bgeo_test.bgeo  build__debug.ps1  build__release.ps1  readme.md  todo.md
houdini/: sop_gui2one.dev.OSM_CPP_road_filter.1.0.hdalc
houdini/OSM_CPP_reader.hda/: sop_gui2one.dev.OSM_CPP_buildings.1.0.hdalc  sop_gui2one.dev.OSM_CPP_reader.1.0.hdalc
src/: BgeoWriter.cpp  BgeoWriter.h  Log.cpp  Log.h  OSMData.cpp  OSMData.h  OSMReader.cpp  OSMReader.h  PlyWriter.cpp  PlyWriter.h  Utils.h  main.cpp  pch.h
